src/scss/pages/payment.scss
@use "../mixins";
@use "../variables" as v;

.section {
    padding: 20px;
    border-radius: 5px;
    margin-bottom: 20px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);

    display: flex;
    justify-content: space-evenly;
    gap: 2rem;

    @include mixins.media-max("tablet-up") {
        flex-direction: column;
        gap: 0.5rem;
    }

    .shopping-cart {
        display: flex;
        flex-direction: column;
        align-items: center;

        .item-qty {
            width: 2rem;
        }
    }

    .payment-container {
        display: flex;
        flex-direction: column;
        gap: 1rem;
        align-items: center;

        .container {
            width: 100%;
            max-width: 30rem;
            margin: auto;

            .cardNumber-container,
            .name-container {
                width: 100%;
                max-width: 30rem;
                margin: auto;
            }

            .cardNumber-container input,
            .name-container input {
                width: 100%;
                min-width: 20rem;
                max-width: 50rem;

            }

            .expiryCvv-container {
                display: flex;
                justify-content: space-between;
                gap: 1rem;

                .expiryDate-container,
                .cvv-container {
                    display: flex;
                    flex-direction: column;
                    gap: 0.5rem;
                    width: 50%;
                }

                .expiryDate-container input {
                    width: 5rem;
                }

                .cvv-container input {
                    width: 3rem;
                }
            }

            input {
                padding: 0.5rem;
                box-sizing: border-box;
            }

            .actions-container {
                display: flex;
                justify-content: center;

                button {
                    padding: 0.5rem 2rem;
                    font-family: Paris24, sans-serif;
                    font-weight: bold;
                    font-size: 0.9rem;
                    border-radius: 0.75rem;
                    color: v.$secondary-color;
                    background-color: v.$primary-color;
                    cursor: pointer;

                    &:hover {
                        background-color: v.$secondary-color;
                        color: v.$primary-color;
                    }
                }
            }

            .ng-valid[required],
            .ng-valid.required {
                border-left: 5px solid v.$login-form-valid-border-color;
                /* green */
            }

            .ng-invalid:not(form) {
                border-left: 5px solid v.$login-form-invalid-border-color;
                padding-left: 0.2rem;
                /* red */
            }

            .error div {
                background-color: v.$login-form-message-background-color;
                color: v.$login-form-message-color;
                padding: 1rem;
                margin-bottom: 1rem;
            }
        }
    }
}

